[package]
name = "raft"
version = "0.1.0"
edition = "2021"
description = "Raft consensus and embedded storage for Nexus"
authors = ["Nexus Team"]

# Allow build.rs to set has_protos cfg (set when proto files exist for gRPC codegen)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(has_protos)"] }

[lib]
# Python module name: nexus._nexus_raft (consistent with _nexus_kernel)
name = "_nexus_raft"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust deps

[[bin]]
name = "nexus-witness"
path = "src/bin/witness.rs"
required-features = ["grpc"]

[dependencies]
# Embedded KV storage — redb 2.x (stable since 1.0, June 2023).
# Issue #1330: Replaced sled 0.34 with redb for reliability + maintenance.
redb = "2"
tempfile = "3"

# Raft consensus (tikv/raft-rs)
raft = { version = "0.7", default-features = false, features = ["protobuf-codec"], optional = true }
protobuf = { version = "2.28", optional = true }  # Required by raft-rs
slog = { version = "2.8", optional = true }  # Required by raft-rs for logging

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for Raft log entries

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "signal"], optional = true }

# gRPC (general-purpose, reusable for Raft and webhooks)
# tls feature enables rustls for mTLS (mutual TLS) transport encryption.
transport = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# Utilities
bytes = { version = "1", optional = true }
dashmap = { version = "6", optional = true }
time = { version = "0.3", features = ["parsing"], optional = true }
sha2 = { version = "0.10", optional = true }  # SHA-256 for JoinCluster token verification
rcgen = { version = "0.13", features = ["pem", "x509-parser"], optional = true }  # Server-side node cert generation for JoinCluster
pem = { version = "3", optional = true }  # PEM parsing for CA fingerprint verification
base64 = { version = "0.22", optional = true }  # Base64 encoding for CA fingerprint
gethostname = { version = "0.5", optional = true }  # Hostname-based node ID derivation

# Python bindings (PyO3 FFI)
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
mimalloc = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["full"]
mimalloc = ["dep:mimalloc"]

# Enable async support (Tokio runtime)
async = ["tokio"]

# Enable Python bindings (PyO3 FFI) — production path.
# Provides LocalRaft for ~5μs metadata/lock operations.
# Includes mimalloc allocator for cdylib builds (safe in terminal crate context).
python = ["pyo3", "mimalloc"]

# Enable Raft consensus (tikv/raft-rs) — EXPERIMENTAL, default OFF.
# Not used in production. Preserved for future multi-node support.
# See: docs/rfcs/adr-raft-sled-strategy.md (Decision 2)
consensus = ["raft", "protobuf", "slog", "async"]

# Enable gRPC transport (tonic + protobuf) — EXPERIMENTAL, default OFF.
# Requires `consensus` feature. Not used in production.
# See: docs/rfcs/adr-raft-sled-strategy.md (Decision 4)
grpc = ["tonic", "prost", "transport", "bytes", "tonic-build", "async", "tracing-subscriber", "consensus", "dashmap", "time", "sha2", "rcgen", "pem", "base64", "gethostname"]

# Enable everything (including experimental features)
full = ["grpc", "consensus", "python"]
