[package]
name = "services"
version = "0.1.0"
edition = "2021"
description = "Rust service-tier impls (Phase 3 parallel-layers crate) — agent table + status resolver, AuditHook, PermissionHook scaffolding. Sits parallel to kernel; consumes kernel APIs (NativeInterceptHook, PathResolver, prepare_audit_stream) and the kernel.sys_* syscall surface, never depends on `backends`."

[lib]
name = "services"
crate-type = ["rlib"]

[features]
default = []
# Optional PyO3 surface — `services::python::register(m)` aggregates
# every PyO3 entry point (`install_audit_hook`, …) into one fn the
# `nexus-cdylib` `#[pymodule]` invokes.  Pulled together with the
# `pyo3` dep so non-cdylib builds (raft-witness, WASM, …) drop both.
python = ["dep:pyo3"]

[dependencies]
contracts = { workspace = true }
# Phase 3: services depends on kernel (one-way; kernel never depends on
# services — the in-tree Rust API surface is `Kernel::register_native_hook`
# / `Kernel::prepare_audit_stream` / `kernel::core::dispatch::*`).
# `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connector HTTP stack, py-hook adapters) off so
# this rlib stays slim; the cdylib pulls them via its own kernel dep.
kernel = { workspace = true }
# Phase H: services depends on raft for the WAL-backed stream backend
# that AuditHook builds on (`nexus_raft::wal_stream_backend`).  raft
# moved to the same workspace tier as services post Cargo flip.
raft = { workspace = true }
# **HARD INVARIANT** — services ⊥ backends.  Do NOT add `backends` here.
# Services that need backend behaviour reach it through `kernel.sys_*`
# syscalls (the same path Python takes), never via direct cross-crate
# imports.  See `services/src/lib.rs` for the rationale.
redb = "2"
dashmap = "6.1"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing = "0.1"
# pyo3 feature unioned by cargo when nexus-cdylib enables `extension-module`
# on its own pyo3 dep — services does not need to set extension-module here.
pyo3 = { version = "0.27.2", features = ["hashbrown"], optional = true }
