[package]
name = "services"
version = "0.1.0"
edition = "2021"
description = "Post-syscall services tier — audit / agents / permission / tasks. Fired on syscall paths through registered hooks; depends on `kernel` only. Reaches backends and raft through `kernel.sys_*` syscalls (the same path Python takes), never via direct cross-crate imports. The orthogonality invariant is `services ⊥ backends ⊥ transport ⊥ raft`."

[lib]
name = "services"
crate-type = ["rlib"]

[features]
default = []
# Optional PyO3 surface — `services::python::register(m)` aggregates
# every PyO3 entry point (`install_audit_hook`, …) into one fn the
# `nexus-cdylib` `#[pymodule]` invokes.  Pulled together with the
# `pyo3` dep so non-cdylib builds (raft-witness, WASM, …) drop both.
python = ["dep:pyo3"]

[dependencies]
contracts = { workspace = true }
# Phase 3: services depends on kernel (one-way; kernel never depends on
# services — the in-tree Rust API surface is `Kernel::register_native_hook`
# / `Kernel::prepare_audit_stream` / `kernel::core::dispatch::*`).
# `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connector HTTP stack, py-hook adapters) off so
# this rlib stays slim; the cdylib pulls them via its own kernel dep.
kernel = { workspace = true }
# **HARD INVARIANT** — services ⊥ backends ⊥ raft. Services that need
# backend or raft-replicated behaviour reach it through `kernel.sys_*`
# syscalls (the same path Python takes), never via direct cross-crate
# imports. See `services/src/lib.rs` for the rationale.
redb = "2"
# Phase 3 restructure plan #6: tasks crate folded in here.
fjall = "3"
# `acp::subprocess` calls libc::dup() to hand kernel-side OwnedFds
# alongside the ones tokio::process::Child still owns; #[cfg(unix)]
# only.
libc = "0.2"
bincode = "1.3"
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing = "0.1"
# Used by `managed_agent::session` for session_id allocation; mirrors
# the `kernel/Cargo.toml` choice (v4 only — no system-time dep needed).
uuid = { version = "1", features = ["v4"] }
# tokio drives the AcpSubprocess + ACP JSON-RPC connection (Unix-only
# via #[cfg(unix)]).  `process` for tokio::process::Command, `io-util`
# for AsyncRead/Write helpers, `time` for `tokio::time::sleep`, `sync`
# for the oneshot reply channels, `rt-multi-thread` for spawn_blocking
# inside the gRPC handler that calls into AcpService.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "sync", "macros"] }
# AsyncRead/Write extension traits + BoxFuture used by acp::connection.
futures = "0.3"
# pyo3 feature unioned by cargo when nexus-cdylib enables `extension-module`
# on its own pyo3 dep — services does not need to set extension-module here.
pyo3 = { version = "0.27.2", features = ["hashbrown"], optional = true }

[dev-dependencies]
tempfile = "3"
