[package]
name = "services"
version = "0.1.0"
edition = "2021"
description = "Post-syscall services tier — audit / agents / permission / tasks. Fired on syscall paths through registered hooks; depends on `kernel` only. Reaches backends and raft through `kernel.sys_*` syscalls (the same path Python takes), never via direct cross-crate imports. The orthogonality invariant is `services ⊥ backends ⊥ transport ⊥ raft`."

[lib]
name = "services"
crate-type = ["rlib"]

[features]
default = []

# Per-service features.  Each gates one `pub mod` line in lib.rs so
# slim Rust binaries (nexus-cluster) link only the services they want.
# Python deployments turn `python` on, which transitively turns every
# service on so the runtime gate (DeploymentProfile) decides at boot.
service-audit = []
service-agents = []
service-managed-agent = ["dep:sudo_code"]
service-acp = []
service-tasks = []
service-permission = []
# Matrix Client-Server v3 adapter — exposes nexus chat-with-me
# DT_STREAMs as Matrix rooms so stock chat clients (Element /
# FluffyChat / Cinny) can join conversations without a bespoke
# nexus client. End-state spec: sudowork-2/docs/tech/nexus-integration-architecture.md §4.2.
service-matrix-adapter = ["dep:axum", "dep:base32", "dep:tower"]

# Optional PyO3 surface — `services::python::register(m)` aggregates
# every PyO3 entry point (`install_audit_hook`, …) into one fn the
# `nexus-cdylib` `#[pymodule]` invokes.  Pulls every service so the
# Python runtime keeps the same surface area as before; non-cdylib
# slim builds (cluster binary, raft-witness, WASM) drop pyo3 and pick
# their own service set.
python = [
    "dep:pyo3",
    "service-audit",
    "service-agents",
    "service-managed-agent",
    "service-acp",
    "service-tasks",
    "service-permission",
    # service-matrix-adapter intentionally NOT in `python` — it has no
    # PyO3 surface; nexus-cdylib opts in separately when shipping the
    # adapter alongside the Python wheel.
]

[dependencies]
contracts = { workspace = true }
# services depends on kernel (one-way; kernel never depends on services
# — the in-tree Rust API surface is `Kernel::register_native_hook` /
# `Kernel::prepare_audit_stream` / `kernel::core::dispatch::*`).
# `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connector HTTP stack, py-hook adapters) off so
# this rlib stays slim; the cdylib pulls them via its own kernel dep.
kernel = { workspace = true }
# **HARD INVARIANT** — services ⊥ backends ⊥ raft. Services that need
# backend or raft-replicated behaviour reach it through `kernel.sys_*`
# syscalls (the same path Python takes), never via direct cross-crate
# imports. See `services/src/lib.rs` for the rationale.
redb = "2"
# Tasks engine storage backend.
fjall = "3"
# `acp::subprocess` calls libc::dup() to hand kernel-side OwnedFds
# alongside the ones tokio::process::Child still owns; #[cfg(unix)]
# only.
libc = "0.2"
bincode = "1.3"
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing = "0.1"
# Used by `managed_agent::session` for session_id allocation; mirrors
# the `kernel/Cargo.toml` choice (v4 only — no system-time dep needed).
uuid = { version = "1", features = ["v4"] }
# tokio drives the AcpSubprocess + ACP JSON-RPC connection (Unix-only
# via #[cfg(unix)]).  `process` for tokio::process::Command, `io-util`
# for AsyncRead/Write helpers, `time` for `tokio::time::sleep`, `sync`
# for the oneshot reply channels, `rt-multi-thread` for spawn_blocking
# inside the gRPC handler that calls into AcpService.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "sync", "macros"] }
# AsyncRead/Write extension traits + BoxFuture used by acp::connection.
futures = "0.3"
# pyo3 feature unioned by cargo when nexus-cdylib enables `extension-module`
# on its own pyo3 dep — services does not need to set extension-module here.
pyo3 = { version = "0.27.2", features = ["hashbrown"], optional = true }
# Matrix C-S adapter HTTP surface. Lazily pulled in by the
# `service-matrix-adapter` feature so non-adapter builds (cluster
# binary, raft-witness, slim WASM) do not pay the axum compile time.
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio", "matched-path", "query"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
# base32 alphabet for Matrix room-id encoding (`!{base32(stream_path)}:nexus.local`).
base32 = { version = "0.5", optional = true }
# `async_trait` lets the `AuthBackend` trait expose async methods —
# axum handlers are async, and the production AuthService backend will
# do an async lookup. Used by every adapter feature gate, so we pull
# it unconditionally rather than wrapping each impl in a
# cfg(feature) hop.
async-trait = "0.1"
# sudocode runtime crate — path-dep across worktrees so
# `ManagedAgentService::start_session` can spawn the per-pid
# managed-agent loop via `sudo_code::spawn_task::spawn_task`.  The
# `package = "runtime"` rename keeps the import surface as
# `sudo_code::*` (matches the architectural decision that "sudo-code
# is in-process Rust, called directly — no DI trait"), even though
# the upstream crate is named `runtime` inside the sudocode workspace.
# Optional + gated on `service-managed-agent` so non-managed-agent
# builds (raft-witness, slim cluster, WASM probes) do not pull
# sudocode and its transitive deps.  Local path-dep ties the build to
# the side-by-side layout `<root>/{nexus-para-pc-3,sudocode}/`; CI
# mirrors this layout, and the dep collapses to a workspace member
# when sudocode lands in the nexus monorepo.
sudo_code = { package = "runtime", path = "../../../sudocode/rust/crates/runtime", optional = true }

[dev-dependencies]
tempfile = "3"
# Test the adapter's HTTP surface end-to-end against an in-memory
# axum router via `tower::Service::call`.
tower = { version = "0.5", features = ["util"] }
