[package]
name = "transport"
version = "0.1.0"
edition = "2021"
description = "Phase 4 parallel-layers crate — high-level transport tier (gRPC server, IPC envelope, federation peer client, peer blob fetch).  Depends on kernel + transport-primitives.  raft consumes transport-primitives directly to keep the dep graph cycle-free (`raft -> transport-primitives` only)."

[lib]
name = "transport"
crate-type = ["rlib"]

[features]
default = []
# `python` aggregates the PyO3 entry points (`PyVfsGrpcServerHandle`,
# `start_vfs_grpc_server`, `PyFederationClient`) into
# `transport::python::register(m)`.  Implies the kernel + raft deps
# this crate already pulls; `pyo3` itself is the only optional dep.
python = ["dep:pyo3"]

[dependencies]
contracts = { workspace = true }
# Phase 4: transport depends on kernel for the in-tree Rust API surface
# (`Kernel`, `KernelError`, `OperationContext`, `vfs_proto` generated
# stubs, `hal::peer::PeerBlobClient` trait).  `default-features = false`
# keeps the kernel runtime defaults (mimalloc allocator, connectors HTTP,
# py-hook adapters) off in this rlib; the cdylib pulls them via its own
# kernel dep.
kernel = { workspace = true }
# `nexus_raft` for `TofuTrustStore` + JoinZone proto stubs that
# `transport::federation` calls into.
raft = { workspace = true }
# `transport-primitives` provides TlsConfig / PeerAddress / NodeAddress
# / connection pool — the low-level types that raft also depends on.
# Splitting these into a separate crate is what breaks the
# `raft -> transport -> kernel -> raft` cycle.
transport-primitives = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
parking_lot = "0.12"
dashmap = "6.1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
# pyo3 feature unioned by cargo when nexus-cdylib enables `extension-module`
# on its own pyo3 dep — transport does not need to set extension-module here.
pyo3 = { version = "0.27.2", features = ["hashbrown"], optional = true }

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
