[package]
name = "transport"
version = "0.1.0"
edition = "2021"
description = "Network surface tier — VFS gRPC server (port 2028) + IPC envelope helpers (in-bound) plus VFS / peer-blob / federation clients (driver-outgoing). Depends on `kernel`, `lib` (transport_primitives module), and `raft` (proto stubs for the federation client)."

[lib]
name = "transport"
crate-type = ["rlib"]

[features]
default = []
# `python` aggregates the PyO3 entry points (`PyVfsGrpcServerHandle`,
# `start_vfs_grpc_server`, `PyFederationClient`, `install_transport_wiring`)
# into `transport::python::register(m)`.
python = ["dep:pyo3"]

[dependencies]
contracts = { workspace = true }
# Transport depends on kernel for the in-tree Rust API surface
# (`Kernel`, `KernelError`, `OperationContext`, `vfs_proto` generated
# stubs). `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connectors HTTP, py-hook adapters) off in this
# rlib; the cdylib pulls them via its own kernel dep.
kernel = { workspace = true }
# `lib::transport_primitives` (TLS / pool / addressing / TOFU /
# PeerBlobClient trait) lives behind lib's `transport` feature.
lib = { workspace = true, features = ["transport"] }
# raft for the federation client's wire-format proto stubs
# (JoinZoneRequest etc.). Transport is the network surface so it
# names raft's wire types directly, like a Postgres client crate
# referencing libpq.
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
parking_lot = "0.12"
dashmap = "6.1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
# pyo3 feature unioned by cargo when nexus-cdylib enables `extension-module`
# on its own pyo3 dep — transport does not need to set extension-module here.
pyo3 = { version = "0.27.2", features = ["hashbrown"], optional = true }

[dev-dependencies]
tempfile = "3"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
